--- a/index(Home).html
+++ b/index(Home).html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> PROJECT </title> 
+    <title>eSakay Fare Guide</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="cropped_circle_image.ico">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<style>
+    <style>
 
 body{
     font-family: sans-serif;
         background-color: #e6f2ff;
         justify-content: center;
         align-items: center;
-}
+        height: 100vh; }
 
 
 </style>
-
 </head>
+
 <body>
 
 <!-- NAVBAR -->
@@ -38,26 +37,22 @@ body{
                     <li class="nav-item"><a class="nav-link" href="page3.html">Schedule</a></li>
                     <li class="nav-item"><a class="nav-link" href="page4.html">Help</a></li>
                 </ul>
-                <button class="btn ms-auto" style="background-color: hwb(188 0% 5%); color: white;"><a class="nav-link" href="registration.html">Create Account</a></button>
+                <button class="btn ms-auto" style="background-color: hwb(188 0% 5%); color: white; "><a class="nav-link" href="registration.html">Create Account</a></button>
             </div>
     </div>
 </nav>
 
-<br>
-
- <div class="container" style="padding-top: 80px;">
-<div class="p-5 border rounded" style="background-color: white; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
-
- <p style="font-size: 30px; padding-top: 5px;">COMFIRMATION:</p>
-
- <p>Your account has been made</p>
- <p> click here to verify your email:</p>
- <a href="https://mail.google.com/mail/u/0/#inbox" style="color:hwb(188 0% 5%) ;">VERIFY EMAIL</a>
-
+<!-- MAIN CONTENT -->
+<div class="container mt-5" style="padding-top: 70px; padding-bottom: 150px;">
+    <div class="card p-4 shadow container">
+    <center>
+        <img src="HAM TRAVEL.png" alt="logo" height="200px">
+        <p style="font-size: 25px; padding-top: 20px;"><b>Welcome to HAM Travel Fare Guide.</b></p>
+        <button class="btn ms-auto" style="color: hwb(188 0% 5%); "><a class="nav-link" href="index(Matrix).html"><b>Click to start</b></a></button>
+    </center>    
+        
+    </div>
 </div>
-  </div>  
-
-
 
 <!-- FOOTER -->
 <footer class="bg-dark text-white text-center p-3 mt-5 fixed-bottom">
@@ -70,8 +65,6 @@ body{
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
-
 
