--- a/registration.html
+++ b/registration.html
@@ -31,16 +31,6 @@
         border: 1px solid #6ea8fe;
     }
 
-    button {
-        width: 100%;
-        padding: 10px;
-        border: none;
-        border-radius: 5px;
-        background: #0d6efd;
-        color: white;
-        font-size: 16px;
-        font-family: 'Gill Sans MT';
-    }
 
     #result {
         margin-top: 15px;
@@ -52,38 +42,27 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="hamtravellogo.png" alt="logo" height="50px"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            <img src="HAM TRAVEL.png" alt="logo" height="60px">
+        </a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html"> Home </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html"> Fare Matrix </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html"> Schedule </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html"> Help </a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="index(Home).html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index(Matrix).html">Fare Matrix</a></li>
+                    <li class="nav-item"><a class="nav-link" href="page3.html">Schedule</a></li>
+                    <li class="nav-item"><a class="nav-link" href="page4.html">Help</a></li>
                 </ul>
-
-                <form class="d-flex">
-                    <button class="btn btn-primary"> Book Now </button>
-                </form>
+                <button class="btn ms-auto" style="background-color: hwb(188 0% 5%); color: white;"><a class="nav-link" href="registration.html">Create Account</a></button>
             </div>
-        </div>
-    </nav>
-    
-    <div class="container mt-5">
+    </div>
+</nav>
+    <div class="container mt-5" style="padding-top: 70px; padding-bottom: 150px;">
         <div class="row align-items-start">
             <div class="col-md-4 text-center">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOH2aZnIHWjMQj2lQUOWIL2f4Hljgab0ecZQ&s"
@@ -127,16 +106,24 @@
                     </div>
                     <br>
                     <a href="confirmation.html">
-                        <button type="button" style="background-color: #0d6efd; color: white;"> Create Account </button>
+                        <center><button type="button" style="background-color: hwb(188 0% 5%); border-color: hwb(188 0% 5%); padding: 5px; border-radius: 5px; color: rgb(255, 255, 255); width: 200px;"><a class="nav-link" href="confirmation.html">Create Account</a></button></center>
                     </a>
                 </form>
             </div>
         </div>
     </div>
 
+<!-- FOOTER -->
+<footer class="bg-dark text-white text-center p-3 mt-5 fixed-bottom">
+    Group Members: Hahyun, Ange, & Milli <br>
+    ICT 9 - Ruby <br>
+    Source: 
+    <a href="https://www.metrolinemap.com/metro/manila/" style="color:hwb(188 0% 5%) ;">
+        Metro Line Map
+    </a>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
 
 
