--- a/index(Home).html
+++ b/index(Home).html
@@ -43,7 +43,7 @@ body{
 </nav>
 
 <!-- MAIN CONTENT -->
-<div class="container mt-5" style="padding-top: 70px; padding-bottom: 150px;">
+<div class="container mt-5" style="padding-top: 70px; padding-bottom: 150px; max-width: 600px;">
     <div class="card p-4 shadow container">
     <center>
         <img src="HAM TRAVEL.png" alt="logo" height="200px">
