--- a/index(Matrix).html
+++ b/index(Matrix).html
@@ -42,7 +42,7 @@
 </nav>
 
 <!-- MAIN CONTENT -->
-<div class="container mt-5" style="padding-top: 70px; padding-bottom: 150px;">
+<div class="container mt-5" style="padding-top: 70px; padding-bottom: 150px; max-width: 600px;">
     <h2 class="text-center mb-4" style="font-size: 30px; padding-top: 20px;"><b>Fare Calculator</b></h2>
 
     <div class="card p-4 shadow">
