--- a/confirmation.html
+++ b/confirmation.html
@@ -45,11 +45,10 @@ body{
 
 <br>
 
- <div class="container" style="padding-top: 80px;">
-<div class="p-5 border rounded" style="background-color: white; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+ <div class="container" style="padding-top: 80px; max-width: 400px;">
+<div class="p-4 border rounded" style=" margin: 1px;: white; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
 
- <p style="font-size: 30px; padding-top: 5px;">COMFIRMATION:</p>
-
+ <p style="font-size: 30px;">COMFIRMATION:</p>
  <p>Your account has been made</p>
  <p> click here to verify your email:</p>
  <a href="https://mail.google.com/mail/u/0/#inbox" style="color:hwb(188 0% 5%) ;">VERIFY EMAIL</a>
