--- a/registration.html
+++ b/registration.html
@@ -19,7 +19,7 @@
         background-color: #cfe6ff;
         padding: 25px;
         border-radius: 10px;
-        width: 600px;
+        width: auto;
         box-shadow: 0 4px 10px rgba(13, 110, 253, 0.15);
     }
 
@@ -62,16 +62,17 @@
             </div>
     </div>
 </nav>
-    <div class="container mt-5" style="padding-top: 70px; padding-bottom: 150px;">
-        <div class="row align-items-start">
-            <div class="col-md-4 text-center">
+    <div class="container d-flex flex-column align-items-center mx-auto mt-5" style="padding-top: 70px; padding-bottom: 150px;">
+        <div class="row">
+            <div class="col-md-4 text-center mx-auto">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOH2aZnIHWjMQj2lQUOWIL2f4Hljgab0ecZQ&s"
                 class="img-fluid rounded-circle mb-3" alt="Profile Picture">
                 <br>
                 <label class="form-label">Profile Picture</label>
                 <input type="file" class="form-control">
             </div>
-            <div class="col-md-8">
+
+            <div class="col-md-8 mx-auto">
                 <form class="p-5 border rounded" style="background-color: white; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
                     <h5> Registration </h5>
                     <div class="row">
