--- a/confirmation.html
+++ b/confirmation.html
@@ -46,7 +46,7 @@ body{
 <br>
 
  <div class="container" style="padding-top: 80px; max-width: 400px;">
-<div class="p-4 border rounded" style=" margin: 1px;: white; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+<div class="p-4 border rounded" style=" margin: 1px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
 
  <p style="font-size: 30px;">COMFIRMATION:</p>
  <p>Your account has been made</p>
@@ -72,5 +72,3 @@ body{
 
 </body>
 </html>
-
-
