--- a/index(Home).html
+++ b/index(Home).html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>eSakay Fare Guide</title>
-    
+    <title> HAM TRAVEL</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/png" href="HAM TRAVEL.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="cropped_circle_image.ico">
 
