--- a/index(Matrix).html
+++ b/index(Matrix).html
@@ -10,11 +10,11 @@
 
     <style>
     body {
-        font-family: 'Gill Sans MT';
         background: #e6f2ff;
         justify-content: center;
         align-items: center;
         height: 100vh;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
 </style>
@@ -44,7 +44,7 @@
 </nav>
 
 <!-- MAIN CONTENT -->
-<div class="container mt-5" style="padding-top: 70px; padding-bottom: 150px; max-width: 600px;">
+<div class="container mt-5" style="padding-top: 70px; padding-bottom: 150px; max-width: 600px;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
     <h2 class="text-center mb-4" style="font-size: 30px; padding-top: 20px;"><b>Fare Calculator</b></h2>
 
     <div class="card p-4 shadow">
