--- a/registration.html
+++ b/registration.html
@@ -10,7 +10,7 @@
     
 <style>
     body {
-        font-family: 'Gill Sans MT';
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         background: #e6f2ff;
         justify-content: center;
         align-items: center;
