--- a/confirmation.html
+++ b/confirmation.html
@@ -11,10 +11,10 @@
 <style>
 
 body{
-    font-family: sans-serif;
-        background-color: #e6f2ff;
-        justify-content: center;
-        align-items: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #e6f2ff;
+    justify-content: center;
+    align-items: center;
 }
 
 
