--- a/index(Home).html
+++ b/index(Home).html
@@ -10,11 +10,12 @@
     <style>
 
 body{
-    font-family: sans-serif;
         background-color: #e6f2ff;
         justify-content: center;
         align-items: center;
-        height: 100vh; }
+        height: 100vh;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
 
 
 </style>
